--- a/shared/components/SiteFooter/index.scss
+++ b/shared/components/SiteFooter/index.scss
@@ -39,7 +39,7 @@
     font-weight: bold;
     line-height: 0.9;
     text-align: center;
-    color: $footer-grey;
+    color: $grey;
   }
 
   @media (min-width: 750px) {
@@ -119,7 +119,7 @@
 .SiteFooter__content {
   border-top: 3px solid $grey;
   background: $footer-grey;
-  padding: 60px 20px 80px 29px;
+  padding: 60px 20px 10px 29px;
   color: $white;
 
   h2 {
